合并地址与用户服务，初步开发用户业务功能。

--- a/sweet-shop-item/src/main/resources/application-dev.yaml
+++ b/sweet-shop-item/src/main/resources/application-dev.yaml
@@ -4,7 +4,7 @@ server:
 sweet:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://172.31.41.102:3306/sweet_shop?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowPublicKeyRetrieval=true
+    url: jdbc:mysql://172.31.41.102:3306/sweet-shop-item?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowPublicKeyRetrieval=true
     username: root
     password: 123456
   redis:
