用户端:收藏功能模块开发

--- a/sweet-shop-common/pom.xml
+++ b/sweet-shop-common/pom.xml
@@ -20,6 +20,10 @@
 
     <dependencies>
         <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+        </dependency>
+        <dependency>
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt</artifactId>
         </dependency>
