--- a/sweet-shop-gateway/pom.xml
+++ b/sweet-shop-gateway/pom.xml
@@ -19,6 +19,14 @@
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+        </dependency>
         <!--加密-->
         <dependency>
             <groupId>org.springframework.security</groupId>
