用户端:购物车模块开发；在购物车模块使用Open Feign调用商品服务api；配置类转移公共模块中。

--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
         <module>sweet-shop-order</module>
         <module>sweet-shop-common</module>
         <module>sweet-shop-gateway</module>
+        <module>sweet-shop-api</module>
         <!-- 可以添加更多模块 -->
     </modules>
 
