--- a/sweet-shop-item/pom.xml
+++ b/sweet-shop-item/pom.xml
@@ -21,6 +21,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.sweet.api</groupId>
+            <artifactId>sweet-shop-api</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>sweet-shop-common</groupId>
             <artifactId>sweet-shop-common</artifactId>
             <version>0.0.1-SNAPSHOT</version>
