用户端:购物车模块优化，地址管理开发。

--- a/sweet-shop-gateway/src/main/resources/bootstrap.yaml
+++ b/sweet-shop-gateway/src/main/resources/bootstrap.yaml
@@ -18,7 +18,7 @@ spring:
         - id: sweet-shop-user
           uri: lb://sweet-shop-user
           predicates:
-            - Path=/user/**,/addresses/**,/employee/**
+            - Path=/user/**,/address/**,/employee/**
         - id: sweet-shop-cart
           uri: lb://sweet-shop-cart
           predicates:
