--- a/sweet-shop-gateway/src/main/resources/bootstrap.yaml
+++ b/sweet-shop-gateway/src/main/resources/bootstrap.yaml
@@ -26,7 +26,7 @@ spring:
         - id: sweet-shop-coupon
           uri: lb://sweet-shop-coupon
           predicates:
-            - Path=/coupon/**
+            - Path=/coupon/**,/user-coupon/**
         - id: sweet-shop-order
           uri: lb://sweet-shop-order
           predicates:
