--- a/sweet-shop-coupon/src/main/resources/application.yaml
+++ b/sweet-shop-coupon/src/main/resources/application.yaml
@@ -8,12 +8,13 @@ spring:
     url: ${sweet.datasource.url}
     username: ${sweet.datasource.username}
     password: ${sweet.datasource.password}
-  redis:
-    host: ${sweet.redis.host}
-    database: ${sweet.redis.database}
   cloud:
     nacos:
       server-addr: ${sweet.cloud.nacos.server-addr}
+  data:
+    redis:
+      host: ${sweet.redis.host}
+      database: ${sweet.redis.database}
 mybatis-plus:
   mapper-locations: classpath:/mapper/*.xml
   type-aliases-package: com.sweet.entity
