用户端: 接入高德地图API,在下单时计算顾客与店铺的距离；完善其他功能。管理端：接入aliOss存储照片。骑手端：接单，配送，完成功能开发，骑手数据统计开发。

--- a/sweet-shop-coupon/pom.xml
+++ b/sweet-shop-coupon/pom.xml
@@ -20,6 +20,11 @@
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>com.sweet.api</groupId>
+            <artifactId>sweet-shop-api</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
         <!-- poi 设置修改excel表-->
         <dependency>
             <groupId>org.apache.poi</groupId>
