--- a/pom.xml
+++ b/pom.xml
@@ -53,11 +53,17 @@
         <jaxb-api>2.3.1</jaxb-api>
         <redisson.version>3.16.8</redisson.version>
         <poi>5.3.0</poi>
+        <aliyun.sdk.oss>3.10.2</aliyun.sdk.oss>
     </properties>
 
     <!-- 依赖管理 -->
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>com.aliyun.oss</groupId>
+                <artifactId>aliyun-sdk-oss</artifactId>
+                <version>${aliyun.sdk.oss}</version>
+            </dependency>
             <dependency>
                 <groupId>org.apache.poi</groupId>
                 <artifactId>poi-ooxml</artifactId>
