使用RocketMQ消息队列，优惠券和用户优惠券在到期时发送消息修改状态。

--- a/pom.xml
+++ b/pom.xml
@@ -54,11 +54,17 @@
         <redisson.version>3.16.8</redisson.version>
         <poi>5.3.0</poi>
         <aliyun.sdk.oss>3.10.2</aliyun.sdk.oss>
+        <rocketmq-spring-boot-starter.version>2.3.0</rocketmq-spring-boot-starter.version>
     </properties>
 
     <!-- 依赖管理 -->
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>org.apache.rocketmq</groupId>
+                <artifactId>rocketmq-spring-boot-starter</artifactId>
+                <version>${rocketmq-spring-boot-starter.version}</version>
+            </dependency>
             <dependency>
                 <groupId>com.aliyun.oss</groupId>
                 <artifactId>aliyun-sdk-oss</artifactId>
