--- a/sweet-shop-coupon/pom.xml
+++ b/sweet-shop-coupon/pom.xml
@@ -21,6 +21,10 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.apache.rocketmq</groupId>
+            <artifactId>rocketmq-spring-boot-starter</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.sweet.api</groupId>
             <artifactId>sweet-shop-api</artifactId>
             <version>0.0.1-SNAPSHOT</version>
